Added CoLearnr theme

--- a/examples/cl.html
+++ b/examples/cl.html
@@ -27,6 +27,9 @@ line-numbering and the
 specifies that every fifth line should be numbered.
 </p>
 
+<?prettify lang=java linenums=true?>
+<pre class="prettyprint">public class java {<br>&nbsp; &nbsp; public static void main() {<br>&nbsp; &nbsp; }<br>}</pre>
+
 <!-- Language hints can be put in XML application directive style comments. -->
 <?prettify lang=html linenums=true?>
 <pre class="prettyprint" id="quine"></pre>
